--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -76,6 +76,11 @@ body {
   display: grid;
   place-items: center;
   min-height: 100vh;
+  padding-inline: 1rem;
+
+  @media (max-width: 500px) {
+    font-size: 1.4rem;
+  }
 }
 
 .advice-card {
@@ -87,6 +92,10 @@ body {
   display: grid;
   place-items: center;
   position: relative;
+
+  @media (max-width: 500px) {
+    padding: 2.5rem 2rem;
+  }
 
   &__text {
     text-align: center;
@@ -102,6 +111,10 @@ body {
     &--quote {
       margin-bottom: 1.8rem;
       max-width: 450px;
+
+      @media (max-width: 500px) {
+        max-width: 295px;
+      }
     }
   }
 
@@ -125,12 +138,6 @@ body {
     transition: all 0.1s ease-in-out;
 
     &:hover {
-      //   box-shadow: hsla(var(--clr-primary-neon-hsl), 0.25) 0px 54px 55px,
-      //     hsla(var(--clr-primary-neon-hsl), 0.12) 0px -12px 30px,
-      //     hsla(var(--clr-primary-neon-hsl), 0.12) 0px 4px 6px,
-      //     hsla(var(--clr-primary-neon-hsl), 0.17) 0px 12px 13px,
-      //     hsla(var(--clr-primary-neon-hsl), 0.09) 0px -3px 5px;
-
       box-shadow: 0px 0px 50px 0px hsla(var(--clr-primary-neon-hsl), 0.8);
     }
   }
